# modality-rtic

./: .gitmodules  README.md
example/: Cargo.toml
example/.cargo/: config
example/modality-component/: Component.toml  events.csv  probes.csv
example/src/: main.rs
