[package]
name = "example"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = { path = "../cortex-m-rtic" }
cortex-m-semihosting = "0.3.3"
systick-monotonic = "0.1.0-rc.1"
lm3s6965 = "0.1.3"
heapless = "0.7"

[dependencies.panic-semihosting]
features = ["exit"]
version = "0.5.2"

[profile.dev]
codegen-units = 1

[profile.release]
lto = true
debug = true
codegen-units = 1

[patch.crates-io]
lm3s6965 = { git = "https://github.com/japaric/lm3s6965" }
